--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,11 +3,11 @@ site_name: Docs Test
 docs_dir: Docs
 
 pages:
-- 'index.md'
-- 'TestDir1/test1-1.md'
-- 'TestDir1/test1-2.md'
-- 'TestDir2/test2-1.md'
-- 'TestDir2/test2-2/md'
-- 'TestDir3/test3-1.md'
-- 'TestDir3/test3-2.md'
-- 'TestDir1/TestDir1-1/test.md'
+- ['index.md']
+- ['TestDir1/test1-1.md']
+- ['TestDir1/test1-2.md']
+- ['TestDir2/test2-1.md']
+- ['TestDir2/test2-2/md']
+- ['TestDir3/test3-1.md']
+- ['TestDir3/test3-2.md']
+- ['TestDir1/TestDir1-1/test.md']
